--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sports News</title>
+    <title>Sports News | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="checkLogin()">
@@ -15,8 +15,67 @@
 </nav>
 
 <div class="content">
+
     <h1>Welcome to Sports News</h1>
-    <p>Latest sports news and updates.</p>
+
+    <img class="blog-img" src="https://images.unsplash.com/photo-1517649763962-0c623066013b" alt="Sports">
+
+    <p>
+        Sports play a vital role in shaping both physical and mental health. From childhood
+        to professional life, sports help individuals develop discipline, teamwork, leadership,
+        and resilience. In today’s fast-paced digital world, sports are not just games; they are
+        global events followed by millions of fans across continents.
+    </p>
+
+    <p>
+        Cricket, football, and tennis are among the most popular sports worldwide. Each of
+        these sports has its own history, culture, and passionate fan base. Cricket dominates
+        countries like Pakistan, India, England, and Australia, while football enjoys global
+        popularity with leagues like the English Premier League, La Liga, and the FIFA World Cup.
+        Tennis, on the other hand, represents elegance, endurance, and individual excellence.
+    </p>
+
+    <img class="blog-img" src="https://images.unsplash.com/photo-1505842465776-3d90f616310d" alt="Cricket Stadium">
+
+    <p>
+        Sports news websites have become an essential source of information for fans. These
+        platforms provide live updates, match analysis, player statistics, injury reports,
+        and expert opinions. With the rise of smartphones and high-speed internet, fans now
+        expect real-time updates and engaging content delivered instantly.
+    </p>
+
+    <p>
+        Blogging in sports journalism allows writers to go beyond scorelines. A well-written
+        sports blog discusses tactics, player form, team strategies, and behind-the-scenes
+        stories. Blogs also give fans a voice by allowing comments and discussions, making
+        sports communities more interactive and engaging.
+    </p>
+
+    <img class="blog-img" src="https://images.unsplash.com/photo-1521412644187-c49fa049e84d" alt="Football Match">
+
+    <p>
+        Technology has transformed sports coverage dramatically. Advanced analytics,
+        performance tracking, VAR systems, and AI-based predictions are now integral parts
+        of modern sports. Fans can analyze player heat maps, ball trajectories, and match
+        probabilities like never before.
+    </p>
+
+    <p>
+        In Pakistan, sports—especially cricket—hold emotional value. Major victories unite
+        the nation, while losses spark deep discussions. Platforms like this sports news website
+        aim to provide balanced, accurate, and engaging content for fans who live and breathe sports.
+    </p>
+
+    <p>
+        Our mission is to deliver reliable sports news across multiple categories in one place.
+        Whether you are a cricket enthusiast, football fanatic, or tennis lover, this website
+        brings you curated updates, blogs, and highlights to keep you informed and entertained.
+    </p>
+
+    <p>
+        Stay connected, stay informed, and enjoy the world of sports with us.
+    </p>
+
 </div>
 
 <script src="auth.js"></script>
