--- a/cricket.html
+++ b/cricket.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Cricket News</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="checkLogin()">
 
@@ -14,12 +14,21 @@
 
 <div class="content">
     <h2>Cricket News</h2>
+
+    <img class="page-img" src="https://images.unsplash.com/photo-1593766827228-8737b4534aa6" alt="Cricket">
+
+    <p>
+        Cricket is one of the most followed sports in the world. From thrilling T20 matches
+        to classic Test cricket, fans enjoy every format of the game.
+    </p>
+
     <ul>
         <li>Pakistan wins ODI series</li>
-        <li>Babar Azam scores century</li>
+        <li>Babar Azam scores a brilliant century</li>
+        <li>Young talent shines in domestic cricket</li>
     </ul>
 </div>
 
-<script src="auth.js"></script>
+<script src="js/auth.js"></script>
 </body>
 </html>
