--- a/cricket.html
+++ b/cricket.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Cricket News</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="checkLogin()">
 
@@ -15,7 +15,7 @@
 <div class="content">
     <h2>Cricket News</h2>
 
-    <img class="page-img" src="https://images.unsplash.com/photo-1593766827228-8737b4534aa6" alt="Cricket">
+    <img class="page-img" src="images (4).jpeg" alt="Cricket">
 
     <p>
         Cricket is one of the most followed sports in the world. From thrilling T20 matches
@@ -29,6 +29,6 @@
     </ul>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
