--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h1>Welcome to Sports News</h1>
 
-    <img class="blog-img" src="https://mages.unsplash.com/photo-1517649763962-0c623066013b" alt="Sports">
+    <img class="blog-img" src="images (4).jpeg" alt="Sports">
 
     <p>
         Sports play a vital role in shaping both physical and mental health. From childhood
@@ -35,7 +35,7 @@
         Tennis, on the other hand, represents elegance, endurance, and individual excellence.
     </p>
 
-    <img class="blog-img" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.fas.org.sg%2Fwp-content%2Fuploads%2F2025%2F08%2FFaris-Ramli-watermark.png&tbnid=cx8bYtRoeFjFTM&vet=1&imgrefurl=https%3A%2F%2Fwww.fas.org.sg%2Fsingapore-to-face-malaysia-in-september-fifa-window-in-first-match-under-interim-head-coach-gavin-lee%2F&docid=37TWGBlQg-ySEM&w=2048&h=1365&source=sh%2Fx%2Fim%2Fm1%2F2&kgs=8149c5b343a6429b&shem=isst" alt="Cricket Stadium">
+    <img class="blog-img" src="images (5).jpeg.png&tbnid=cx8bYtRoeFjFTM&vet=1&imgrefurl=https%3A%2F%2Fwww.fas.org.sg%2Fsingapore-to-face-malaysia-in-september-fifa-window-in-first-match-under-interim-head-coach-gavin-lee%2F&docid=37TWGBlQg-ySEM&w=2048&h=1365&source=sh%2Fx%2Fim%2Fm1%2F2&kgs=8149c5b343a6429b&shem=isst" alt="Cricket Stadium">
 
     <p>
         Sports news websites have become an essential source of information for fans. These
@@ -51,7 +51,7 @@
         sports communities more interactive and engaging.
     </p>
 
-    <img class="blog-img" src="https://images.unsplash.com/photo-1521412644187-c49fa049e84d" alt="Football Match">
+    
 
     <p>
         Technology has transformed sports coverage dramatically. Advanced analytics,
