--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Tennis, on the other hand, represents elegance, endurance, and individual excellence.
     </p>
 
-    <img class="blog-img" src="images (5).jpeg.png&tbnid=cx8bYtRoeFjFTM&vet=1&imgrefurl=https%3A%2F%2Fwww.fas.org.sg%2Fsingapore-to-face-malaysia-in-september-fifa-window-in-first-match-under-interim-head-coach-gavin-lee%2F&docid=37TWGBlQg-ySEM&w=2048&h=1365&source=sh%2Fx%2Fim%2Fm1%2F2&kgs=8149c5b343a6429b&shem=isst" alt="Cricket Stadium">
+    <img class="blog-img" src="images (5).jpeg" alt="Cricket Stadium">
 
     <p>
         Sports news websites have become an essential source of information for fans. These
